# booklore-enrich

./: .gitignore  CLAUDE.md  booklore-cleanup.py  booklore-dedup.py  booklore-export.csv  pyproject.toml
docs/plans/: 2026-02-20-booklore-enrich-design.md  2026-02-20-booklore-enrich-implementation.md  2026-02-22-tag-command-improvements-design.md  2026-02-22-tag-command-improvements.md
docs/superpowers/plans/: 2026-03-11-epub-metadata-embed.md
docs/superpowers/specs/: 2026-03-11-epub-metadata-embed-design.md
src/booklore_enrich/: __init__.py  booklore_client.py  cli.py  config.py  db.py  epub_writer.py  path_parser.py
src/booklore_enrich/commands/: __init__.py  discover.py  embed.py  export.py  scrape.py  tag.py
src/booklore_enrich/scraper/: __init__.py  base.py
tests/: test_booklore_client.py  test_cli.py  test_config.py  test_db.py  test_discover.py  test_embed.py  test_epub_writer.py  test_export.py  test_integration.py  test_path_parser.py  test_scrape_command.py  test_scrape_from_dir.py  test_scraper_base.py  test_tag.py
